tdf#127547 Freeze in Microsoft Print to PDF dialog

Change-Id: I7a6ef85fae637c8359a96df1bd31d7e8f0b36512
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/159369
Tested-by: Hossein <hossein@libreoffice.org>
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 07dfeffae8cba808dbad85dfed9b6a693a1f9543)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194754
Reviewed-by: Thorsten Behrens <thorsten.behrens@collabora.com>
Tested-by: allotropia jenkins <jenkins@allotropia.de>
Tested-by: Gabor Kelemen <gabor.kelemen@collabora.com>